# hubtty

./: .flake8  .gitignore  .gitreview  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-app.yml  python-publish.yml
doc/: Makefile
doc/source/: authentication.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  usage.rst
examples/: googlesource-gertty.yaml  googlesource-ghubtty.yaml  minimal-ghubtty.yaml  minimal-hubtty.yaml  opendev-gertty.yaml  opendev-ghubtty.yaml  openshift-hubtty.yaml  rdo-gertty.yaml  rdo-ghubtty.yaml  reference-gertty.yaml  reference-ghubtty.yaml  reference-hubtty.yaml
gertty/: app.py  config.py  db.py  gitrepo.py  keymap.py  sync.py
gertty/alembic/versions/: 399c4b3dcc9a_add_hashtags.py  45d33eccc7a7_add_checks.py  6f6183367a8f_robot_comments.py
gertty/search/: __init__.py  parser.py  tokenizer.py
gertty/view/: change.py  diff.py
ghubtty/: alembic.ini  app.py  auth.py  commentlink.py  config.py  db.py  dbsupport.py  gitrepo.py  keymap.py  mywid.py  palette.py  sync.py  version.py
ghubtty/alembic/: env.py
ghubtty/alembic/versions/: 254ac5fc3941_attach_comments_to_files.py  312cd5a9f878_add_can_submit_column.py  399c4b3dcc9a_add_hashtags.py  3cc7e3753dc3_add_hold.py  3d429503a29a_add_draft_fields.py  46b175bfa277_add_pending_actions.py  4a802b741d2f_add_starred.py  4cc9c46f9d8b_add_account_table.py  50344aecd1c2_add_files_table.py  56e48a4a064a_increase_status_field_width.py  6f6183367a8f_robot_comments.py  725816dc500_add_fetch_ref_column.py  7ef7dfa2ca3a_add_change_outdated.py  a18731009699_add_server_table.py
ghubtty/search/: __init__.py  parser.py  tokenizer.py
ghubtty/view/: change.py  change_list.py  diff.py  project_list.py  side_diff.py  unified_diff.py
hubtty/: alembic.ini  app.py  auth.py  base_app.py  commentlink.py  config.py  db.py  dbsupport.py  generated.py  gitrepo.py  keymap.py  markdown.py  mywid.py  palette.py  perf.py  sync.py  syntax.py  textual_app.py  version.py
hubtty/alembic/: env.py
hubtty/alembic/versions/: 12554687e95c_remove_topic_from_change.py  164f2a7ca2b0_rename_change_pending_status_to_pending_.py  175ea25b42d5_add_html_url_for_prs.py  1e41885ea284_add_draft_to_pull_request.py  21d691c40b39_more_db_tweaking.py  254ac5fc3941_attach_comments_to_files.py  2862256bd583_remove_pending_starred.py  2b367b62fb13_add_label_table.py  312cd5a9f878_add_can_submit_column.py  32e7026ffef6_remove_commit_pending_message.py  399c4b3dcc9a_add_hashtags.py  3cc7e3753dc3_add_hold.py  3d429503a29a_add_draft_fields.py  3dbc09758351_rename_change_to_pull_request.py  3f3f38356cbc_update_approvals.py  439753e172a0_drop_commit_can_submit.py  44402069e137_initial_schema.py  46b175bfa277_add_pending_actions.py  4a2afc48dd09_add_can_push_to_project.py  4a802b741d2f_add_starred.py  4cc9c46f9d8b_add_account_table.py  4fb888763b3b_add_change_label_table.py  50344aecd1c2_add_files_table.py  536a0daafe68_rename_project_to_repository.py  56e48a4a064a_increase_status_field_width.py  579571523a48_remove_approval_labels.py  58a0f7616432_drop_pending_cherry_pick_table.py  5c7de722e68c_drop_hashtag_table.py  6f6183367a8f_robot_comments.py  725816dc500_add_fetch_ref_column.py  79d141409a92_drop_sync_query_table.py  7ef7dfa2ca3a_add_change_outdated.py  83be31a4793a_add_columns_to_change.py  862b2a89e855_remove_conflicts_table.py  9ab0f566d94b_drop_checker.py  9ea887cbb620_update_comments.py  a18731009699_add_server_table.py  a2974173ff5b_rename_revision_to_commit.py  a2af1e2e44ee_.py  b22d9336aba0_rename_approval_category_to_state.py  (+7 more)
hubtty/search/: __init__.py  parser.py  tokenizer.py
hubtty/sync/: README.md  __init__.py  constants.py  events.py  exceptions.py  http.py  queue.py  sync.py  task.py
hubtty/sync/tasks/: __init__.py  account.py  check_helpers.py  maintenance.py  pull_request.py  repository.py  repository_check.py  upload.py
hubtty/textual_view/: __init__.py  diff.py  pull_request.py  pull_request_list.py  repository_list.py
hubtty/view/: __init__.py  change.py  change_list.py  diff.py  mouse_scroll_decorator.py  project_list.py  pull_request.py  pull_request_list.py  repository_list.py  side_diff.py  unified_diff.py
tests/: __init__.py  test_commentlink.py  test_custom_commands.py  test_expand_tabs.py  test_generated.py  test_gitrepo.py  test_parse_internal_url.py  test_syntax.py
tests/sync/: __init__.py  conftest.py  test_check_helpers.py  test_events.py  test_http.py  test_pull_request.py  test_queue.py  test_repository.py  test_sync.py  test_task.py  test_upload_review.py
