[metadata]
name = hubtty
summary = Hubtty is a console-based interface to the Github Code Review system.
description-file =
    README.rst
author = The hubtty developers
author-email = hubtty@mandre.org
home-page = https://github.com/hubtty/hubtty
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = github console urwid review

[files]
packages =
    hubtty
data_files =
    share/hubtty/examples = examples/*

[entry_points]
console_scripts =
    hubtty = hubtty.app:main
