[metadata]
name = hubtty
summary = Hubtty is a console-based interface to the Github Code Review system.
description-file =
    README.rst
author = The hubtty developers
author-email = hubtty@mandre.org
home-page = https://hubtty.github.io
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
python_requires = >=3.10
keywords = github console urwid review

[files]
packages =
    hubtty
data_files =
    share/hubtty/examples = examples/*

[entry_points]
console_scripts =
    hubtty = hubtty.app:main
